syntax = "proto3";
package pq.streaming.games.timer;
option go_package="server";

message User {
    string id = 1;
    string display_name = 2;
    bool is_host = 3;
}

message Countdown {
    int64 time = 1;
}

message TimerRequest {
    string game_id = 1;
}

message Connection {
    string game_id = 1;
    User user = 2;
    bool active = 3;
}

message Message {}

service Broadcast {
    rpc CreateStream(Connection) returns (stream Message) {}
    rpc StartTimer(TimerRequest) returns (stream Countdown) {}
}
